feat: prepare ColaboHub production workflows