@@ -6,6 +6,7 @@ import static org.mockito.Mockito.when;
 import java.math.BigDecimal;
 import java.time.Instant;
 import java.util.List;
+import java.util.Collections;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -33,6 +34,7 @@ import com.colaborapp.users.domain.Role;
 import com.colaborapp.users.domain.RoleCode;
 import com.colaborapp.users.domain.User;
 import com.colaborapp.users.repository.UserRepository;
+import com.colaborapp.security.AuthenticatedUserService;
 
 @ExtendWith(MockitoExtension.class)
 class SalesReportServiceTest {
@@ -99,55 +101,68 @@ class SalesReportServiceTest {
     @Test
     void storeUserTodayDetailsOnlyIncludesAllowedStoreScope() {
         when(currentTenantProvider.getCurrentTenant()).thenReturn(tenant);
-        when(accessControlService.hasRole(RoleCode.ADMIN_SYSTEM)).thenReturn(false);
         when(accessControlService.hasRole(RoleCode.STORE_USER)).thenReturn(true);
-        when(accessControlService.currentStoreIds()).thenReturn(List.of(10L));
-        when(saleStoreSummaryRepository.findByPeriodWithSaleAndStore(
+        when(accessControlService.getCurrentUser()).thenReturn(new AuthenticatedUserService.CurrentAuthenticatedUser(
+                collaborator,
+                List.of("STORE_USER"),
+                true,
+                1L,
+                "Mercado 1",
+                List.of(1L),
+                Collections.emptyList(),
+                List.of("Mercado 1")));
+        when(saleItemRepository.findAllByCollaboratorAndPeriodWithDetails(
                 org.mockito.ArgumentMatchers.eq(1L),
+                org.mockito.ArgumentMatchers.eq(7L),
                 org.mockito.ArgumentMatchers.eq(SaleStatus.CONFIRMED),
                 org.mockito.ArgumentMatchers.any(),
                 org.mockito.ArgumentMatchers.any()))
                 .thenReturn(List.of(
-                        summary(100L, "S-100", 10L, 1L, "Tienda A", "12000.0000", "500.0000", "11500.0000"),
-                        summary(100L, "S-100", 11L, 1L, "Tienda B", "8000.0000", "300.0000", "7700.0000"),
-                        summary(101L, "S-101", 11L, 1L, "Tienda B", "9000.0000", "350.0000", "8650.0000")));
+                        item("Sticker BTS", 2, "4000.0000", "200.0000", "3800.0000"),
+                        item("Album", 1, "12000.0000", "500.0000", "11500.0000")));
 
         var response = salesReportService.getTodayDetails();
 
         assertThat(response.salesCount()).isEqualTo(1L);
         assertThat(response.stores()).hasSize(1);
         assertThat(response.sales()).hasSize(1);
-        assertThat(response.totalAmount()).isEqualByComparingTo("12000.0000");
-        assertThat(response.sales().getFirst().totalAmount()).isEqualByComparingTo("12000.0000");
-        assertThat(response.sales().getFirst().stores()).hasSize(1);
-        assertThat(response.sales().getFirst().stores().getFirst().storeId()).isEqualTo(10L);
+        assertThat(response.totalAmount()).isEqualByComparingTo("16000.0000");
+        assertThat(response.stores().getFirst().storeName()).isEqualTo("Mercado 1");
     }
 
     @Test
     void collaboratorDashboardSummaryUsesAllowedStoreScopeAndProductCounts() {
         when(currentTenantProvider.getCurrentTenant()).thenReturn(tenant);
-        when(accessControlService.hasRole(RoleCode.ADMIN_SYSTEM)).thenReturn(false);
         when(accessControlService.hasRole(RoleCode.STORE_USER)).thenReturn(true);
-        when(accessControlService.currentStoreIds()).thenReturn(List.of(10L));
-        when(saleStoreSummaryRepository.findByPeriodWithSaleAndStore(
+        when(accessControlService.getCurrentUser()).thenReturn(new AuthenticatedUserService.CurrentAuthenticatedUser(
+                collaborator,
+                List.of("STORE_USER"),
+                true,
+                1L,
+                "Mercado 1",
+                List.of(1L),
+                Collections.emptyList(),
+                List.of("Mercado 1")));
+        when(saleItemRepository.findAllByCollaboratorAndPeriodWithDetails(
                 org.mockito.ArgumentMatchers.eq(1L),
+                org.mockito.ArgumentMatchers.eq(7L),
                 org.mockito.ArgumentMatchers.eq(SaleStatus.CONFIRMED),
                 org.mockito.ArgumentMatchers.any(),
                 org.mockito.ArgumentMatchers.any()))
                 .thenReturn(List.of(
-                        summary(200L, "S-200", 10L, 1L, "Tienda A", "15000.0000", "700.0000", "14300.0000"),
-                        summary(201L, "S-201", 11L, 1L, "Tienda B", "21000.0000", "900.0000", "20100.0000")));
-        when(productRepository.countByTenantIdAndStore_IdInAndStatus(1L, List.of(10L), ProductStatus.ACTIVE)).thenReturn(6L);
-        when(productRepository.countByTenantIdAndStore_IdInAndStatusAndStockLessThanEqual(1L, List.of(10L), ProductStatus.ACTIVE, 5))
+                        item("Sticker BTS", 2, "4000.0000", "200.0000", "3800.0000"),
+                        item("Album", 1, "12000.0000", "500.0000", "11500.0000")));
+        when(productRepository.countByTenantIdAndOwnerUser_IdAndStatus(1L, 7L, ProductStatus.ACTIVE)).thenReturn(6L);
+        when(productRepository.countByTenantIdAndOwnerUser_IdAndStatusAndStockLessThanEqual(1L, 7L, ProductStatus.ACTIVE, 5))
                 .thenReturn(2L);
 
         var response = salesReportService.getDashboardSummary();
 
         assertThat(response.salesCount()).isEqualTo(1L);
-        assertThat(response.totalAmount()).isEqualByComparingTo("15000.0000");
+        assertThat(response.totalAmount()).isEqualByComparingTo("16000.0000");
         assertThat(response.activeProducts()).isEqualTo(6L);
         assertThat(response.lowStockProducts()).isEqualTo(2L);
-        assertThat(response.stores()).extracting(store -> store.storeId()).containsExactly(10L);
+        assertThat(response.stores()).extracting(store -> store.storeName()).containsExactly("Mercado 1");
     }
 
     @Test
@@ -173,6 +188,9 @@ class SalesReportServiceTest {
         assertThat(response.totalAmount()).isEqualByComparingTo("4000.0000");
         assertThat(response.totalCommissionAmount()).isEqualByComparingTo("200.0000");
         assertThat(response.totalNetAmount()).isEqualByComparingTo("3800.0000");
+        assertThat(response.entries().getFirst().paymentMethod()).isEqualTo("DEBITO");
+        assertThat(response.entries().getFirst().promotionLabel()).isEqualTo("2x1500");
+        assertThat(response.entries().getFirst().fixedCommissionAmount()).isEqualByComparingTo("33.0000");
     }
 
     private SaleStoreSummary summary(
@@ -223,6 +241,7 @@ class SalesReportServiceTest {
         Market market = new Market();
         market.setId(1L);
         market.setTenant(currentTenant);
+        market.setName("Mercado 1");
 
         Store store = new Store();
         store.setId(10L);
@@ -236,6 +255,8 @@ class SalesReportServiceTest {
         sale.setSaleNumber("S-500");
         sale.setStatus(SaleStatus.CONFIRMED);
         sale.setConfirmedAt(Instant.parse("2026-03-15T14:00:00Z"));
+        sale.setUfValue(new BigDecimal("39000.0000"));
+        sale.setPaymentMethod(com.colaborapp.sales.domain.PaymentMethod.DEBITO);
 
         SaleItem item = new SaleItem();
         item.setSale(sale);
@@ -243,7 +264,13 @@ class SalesReportServiceTest {
         item.setCollaboratorUserId(7L);
         item.setCollaboratorNameSnapshot("Camila");
         item.setProductNameSnapshot(productName);
+        item.setBaseUnitPrice(new BigDecimal("2000.0000"));
+        item.setPricingType(com.colaborapp.sales.domain.SaleItemPricingType.PROMOTION);
+        item.setAppliedPromotionName("2x1500");
         item.setQuantity(quantity);
+        item.setCommission1Amount(new BigDecimal("33.0000"));
+        item.setCommission2Amount(new BigDecimal("120.0000"));
+        item.setCommissionIvaAmount(new BigDecimal("47.0000"));
         item.setSubtotal(new BigDecimal(subtotal));
         item.setTotalCommissionAmount(new BigDecimal(commission));
         item.setNetAmount(new BigDecimal(net));
